# c-sample-code

./: code.txt  code2.txt
Log_Level/: log_level.c
PBKDF2/: pbkdf2.c
UCS2/: CMakeLists.txt  Readme  assert_coding.c  assert_coding.cpp  iconv.c  log_level.h  main.c  myiconv.c  ucs2.c  unucs2.c
UCS2_v2/: CMakeLists.txt  at_stk.txt
UCS2_v2/mysrc/: CMakeLists.txt
at_mbim/: at_procs.c  at_procs.h  at_thread.c  cmd_match.c
c-sample-code/: README.md
c-sample-code/Driver_sample/hello_Driver/: Makefile  hello.c
c-sample-code/at_mbim/: Makefile  at_mbim  at_thread.c  main.c
c-sample-code/c-sample-code/: README.md
c-sample-code/c-sample-code/at_mbim/: at_thread.h  cmd_match.h  main.c
c-sample-code/c_api/: c_api.c  test.c
c-sample-code/c_important/: inset_msg.c  networdname
c-sample-code/c_important/at_test/: comportswap.c  comportswap.h
c-sample-code/c_important/getopt_long/: test  test.c
c-sample-code/c_important/mkdir_file/: Makefile  mkdir_file
c-sample-code/c_important/networdname/: networdname.c
c-sample-code/c_important/pthread/: pthread.c
c-sample-code/c_important/script_test/: script.sh  second.sh
c-sample-code/c_important/serial/: main.c
c-sample-code/c_important/static_test/: static_test  (+1 more)
c_api/: c_api.h
c_important/: inset_msg  port  port.c  pthread
c_important/at_test/: Makefile
c_important/mkdir_file/: mkdir_file.c
c_important/quilt_test/: quilt_test
c_important/serial/: serial.c
data_struct/link_list/: Makefile  link_list.c  link_list.h  main.c
data_struct/sequence_list/: Makefile  seq_list_ops.c  seq_list_ops.h
(+85 files in other folders)
